# telegram-ai-provider

./: .env.example  .gitignore  CLAUDE.md  Makefile  QWEN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seedance-integration-prompt.md  todo.md
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_memory.py  003_add_user_preferences.py  004_add_message_attachments.py  005_add_composite_index_messages.py  006_add_video_generations.py  007_add_v2v_columns.py
config/: prompts.py  settings.py
docker/: Dockerfile
src/: main.py
src/database/: allowed_users.py  connection.py  context.py  memory.py  preferences.py  service_status.py  video.py
src/handlers/: __init__.py  auth.py  commands.py  image.py  memory.py  messages.py  search.py  video.py  voice.py
src/middleware/: __init__.py  auth.py  throttle.py
src/services/: claude.py  documents.py  evolink.py  image_gen.py  openai_fallback.py  transcription.py  video_gen.py  wavespeed.py  web_search.py
src/states/: __init__.py  video.py
src/utils/: text.py
tests/: conftest.py  test_auth.py  test_context.py  test_documents.py  test_evolink.py  test_handlers.py  test_memory.py  test_preferences.py  test_service_status.py  test_services.py  test_streaming.py  test_text.py  test_throttle.py  test_video.py  test_wavespeed.py
